--- a/views/multiviewAll.ejs
+++ b/views/multiviewAll.ejs
@@ -53,6 +53,10 @@
 
     <style>
 
+    .video-wrapper{
+        padding-top: 20px;
+    }
+
     .video-grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(648px, 1fr));
